# project_social_network1_django

./: README.md  manage.py  pyproject.toml  requirements.txt
main_app/: admin.py  permissions.py  urls.py  validators.py
main_app/migrations/: 0001_initial.py
main_app/models/: __init__.py  comments.py  publications.py  users.py
main_app/serializers/: __init__.py  comments.py  publications.py  users.py
main_app/views/: __init__.py  comments.py  publications.py  users.py
project_social_network1_django/: asgi.py  settings.py  urls.py  wsgi.py
